# core

./: .gitignore  .gitmodules  CMakePresets.json  Directory.Build.props  LICENSE  README.md  buildLinux.sh  buildWin.bat  buildWin.ps1
.github/workflows/: build.yml
3rd/MinHook.NET/MinHook.NET/: Hook.cs  HookEngine.cs  MinHook.NET.csproj
3rd/hlsteam/win-x64/: steam.exp  steam.hdll  steam.lib
sample/: Directory.Build.props  Directory.Build.targets  sample.sln
sample/DebugMod/: DebugMod.csproj  DebugModMod.cs
sample/DoubleCells/: DoubleCells.csproj  DoubleCellsMod.cs
sample/LibraryMod/: HelloWorld.cs  LibraryMod.csproj
sample/SampleHook/: SampleHook.csproj  SampleHookMod.cs
sample/SampleSimple/: SampleSimple.csproj  SimpleMod.cs
sample/SampleSimple/assets/: test1.txt
sample/SampleWeapon/: Hook_WeaponCreate.cs  OtherDashSword.cs  SampleWeapon.csproj  SimpleMod.cs  data.cdb
sources/: .editorconfig  DeadCellsCoreModding.sln  DeadCellsCoreModding.slnx  Directory.Build.props
sources/DCCMShell/: DCCMShell.csproj  Shell.cs  Shell.managed.cs
sources/DeadCellsModding/: DeadCellsModding.csproj  NativeMethods.txt  Program.cs
sources/DeadCellsModding/Properties/: launchSettings.json
sources/HashlinkNET.Bytecode/: HlBinaryReader.cs  HlCode.cs  HlConstant.cs  HlFunction.cs  HlNative.cs  HlOpcodeKind.cs  HlType.cs  HlTypeRef.cs  IHlNamedType.cs
sources/HashlinkNET.Bytecode/OpCodeParser/: HlInstruction.cs  HlOpCode.cs  HlOpCodes.cs
sources/HashlinkNET.Compiler/: AssemblyInfo.cs  BaseCompiler.cs  CompileConfig.cs  DataContainer.cs  HashlinkCompiler.cs  HashlinkNET.Compiler.csproj  IDataContainer.cs  Utils.cs
sources/HashlinkNET.Compiler/Data/: ArrowFuncContextData.cs  ClosureClassData.cs  EnumClassData.cs  FuncData.cs  GlobalDatas.cs  ObjClassData.cs  RuntimeImports.cs  VirtualClassData.cs  VirtualGroupData.cs
sources/HashlinkNET.Compiler/Pseudocode/: EmitContext.cs  FunctionCompiler.cs  IRResult.cs
sources/HashlinkNET.Compiler/Steps/: CompileStep.cs  ForeachHlTypeCompileStep.cs  GenerateTypeCompileStep.cs  ParallelCompileStep.cs
sources/HashlinkNET.Compiler/Utils/: GeneralUtils.cs  HookGenerator.cs
sources/HashlinkSharp/: AssemblyAttributes.cs  FakeStackTraceManager.cs  GlobalSuppressions.cs  HashlinkException.cs  HashlinkFunc.cs  HashlinkNative.cs  HashlinkSharp.csproj  HashlinkThread.cs  IHashlinkCustomMarshaler.cs  IHashlinkPointer.cs  OpCode.cs  Structs.cs  Utils.cs
sources/HashlinkSharp/Brigde/: MethodWrapper.cs  MethodWrapperFactory.cs
sources/HashlinkSharp/Marshaling/: DefaultHashlinkMarshaler.cs  HashlinkError.cs  HashlinkMarshal.cs  HashlinkObjHandle.cs  IHashlinkMarshaler.cs  NETExcepetionError.cs
sources/HashlinkSharp/Patch/: CustomHashlinkFunction.cs  HlFunctionDefinition.cs  HlFunctionReg.cs  HlInstruction.cs  HlOpCode.cs  HlOpCodes.cs
sources/HashlinkSharp/Proxy/: HashlinkObj.Dyn.cs  HashlinkObj.ExtendData.cs  HashlinkObj.cs  HashlinkObjPtr.cs  HashlinkTypedObj.cs  IExtendData.cs  IExtraData.cs  IHashlinkValue.cs
sources/HashlinkSharp/Reflection/: HashlinkGlobal.cs  (+4 more)
sources/HaxeProxy/: AssemblyAttributes.cs  AssemblyInfo.cs  HaxeProxy.csproj
sources/HaxeSharp/: AssemblyAttributes.cs  HaxeArray.cs  HaxeClosure.cs  HaxeObject.cs  HaxeObjectBase.cs  HaxeSharp.csproj
sources/ModCore/: AssemblyAttributes.cs  AssemblyInfo.cs  Core.Native.cs  Core.cs  CoreConfig.cs  DeadCells.cs  GameConstants.cs  GlobalSuppressions.cs  Imports.cs  LogInitializer.cs  ModCore.csproj  Module.cs  ModuleEventCaller.cs  Native.cs  Native.export.cs  Program.cs  SDL2.cs  Startup.cs  Utils.cs
sources/ModCore.BuildSystem/: BuildModInfo.cs  BuildSystem.cs  ModCore.BuildSystem.MSBuild.csproj  ModCore.BuildSystem.csproj  Utils.cs
sources/ModCore.Common/: AssemblyAttributes.cs  AssemblyInfo.cs  ContextConfig.cs  ModCore.Common.csproj  Native.cs  Native.export.cs
sources/ModCore.Game/: ModCore.Game.csproj
sources/ModCore.ModLoader.Default/: DefaultModInfo.cs  DefaultModLoader.cs  ModCore.ModLoader.Default.csproj  SideResModInfo.cs  SideResModLoader.cs
sources/ModCore.Native/: AssemblyInfo.cs  ExecutableMemoryManager.cs  HashlinkNative.cs  ModCore.Native.csproj  Native.cs  Native.gc.cs  NativeAsm.cs  NativeCommon.cs  NativeMethods.txt  NativeWin.cs  Structs.cs
sources/NonPublicNativeMembers/: NativeMembersData.cs  NativeMembersManager.cs  NativeMethods.txt  NonPublicNativeMembers.csproj
sources/modcoreloader/: dllmain.cpp  framework.h  hostfxr.h  modcoreloader.vcxproj  modcoreloader.vcxproj.filters  nethost.h
sources/native/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  cpp.hint  native.sln  vcpkg.json
sources/native/hdlls/libs/: CMakeLists.txt
sources/native/hdlls/libs/directx/: directx.cpp  window.c
sources/native/hdlls/libs/hldiscord/: CMakeLists.txt
sources/native/hdlls/libs/hldiscord/src/: hldiscord.cpp
sources/native/hdlls/libs/openal/: CMakeLists.txt
sources/native/hdlls/libs/sdl/: CMakeLists.txt
sources/native/include/: hl.h  hlmodule.h
sources/native/lib/: libnethost.lib
sources/native/lib/win-x86/: libhl.lib
sources/native/libhl/: CMakeLists.txt  alloc.c
sources/native/libhl/std/: buffer.c  cast.c  error.c  file.c  obj.c  sys.c  thread.c
sources/native/modcorenative/: CMakeLists.txt  asm_x64.asm  asm_x86.asm  dccm_api.h  debugger.c  game.c  hl2cs.c  hl2cs.cpp  hlutils.c  hlutils.cpp  linux_x64.asm  loader.cpp  managed_apis.c  managed_apis.h  modcorenative.c  modcorenative.cpp  modcorenative.h  trace.c  track.c  win_x64.asm
sources/native/modcorenative/hl/: code.c  jit.c  module.c
sources/native/modcorenative/win/: win_trace.c
test/TestMod/: TestMod.csproj  TestModMain.cs
test/TestRunner/: ExceptionTest.cs  GameContext.cs  GcTest.cs  HashlinkTest.cs  HaxeProxyTest.cs  ModLoaderTest.cs  ObjectInheritanceTest.cs  TestFramework.cs  TestRunner.csproj  xunit.runner.json
tools/: tools.sln
tools/BytecodeMapping/: BytecodeMapping.csproj  BytecodeMappingData.cs
tools/HaxeProxyGenerator/: HaxeProxyGenerator.csproj  Program.cs
tools/NonPublicMemberScanner/: NonPublicMemberScanner.csproj  Program.cs
(+358 files in other folders)
