
cmake_minimum_required (VERSION 3.20)

project ("native")

SET(CMAKE_ASM_NASM_SOURCE_FILE_EXTENSIONS asm) 
ENABLE_LANGUAGE(ASM_NASM)
SET(CMAKE_ASM_NASM_FLAGS "-g") 

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../../bin/core/native/)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 11)


set(X64 true)
set(ARCH_NAME x64)

if(WIN32)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}win-${ARCH_NAME})
else()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}linux-${ARCH_NAME})
endif()

set(OUTPUT_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
    #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endforeach()

add_definitions(-DX64)

cmake_host_system_information(RESULT CPU_NUMBER_OF_LOGICAL_CORES QUERY NUMBER_OF_LOGICAL_CORES)
#add_compile_options($<$<CXX_COMPILER_ID:MSVC>:/MP${CPU_NUMBER_OF_LOGICAL_CORES}>)

if(MSVC)

set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")

add_definitions(-D_CRT_SECURE_NO_WARNINGS=1 -DUNICODE -D_UNICODE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi /MP${CPU_NUMBER_OF_LOGICAL_CORES}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /Zi /MP${CPU_NUMBER_OF_LOGICAL_CORES}")

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /OPT:ICF")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG /OPT:ICF")
else()

endif()



add_subdirectory ("3rd/hashlink")
add_subdirectory ("modcorenative")

